--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="/static/main.css" />
+<link rel="stylesheet" href="main.css" />
 </head><body a="auto">
     <main class="page-content" aria-label="Content">
       <div class="w">
