--- a/image-repo.html
+++ b/image-repo.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
  <title>Olivia's Image Repository</title>
+ <link rel="stylesheet" href="main.css" />
 <body a="auto">
     <main class="page-content" aria-label="Content">
       <div class="w">
