--- a/thought-repo.html
+++ b/thought-repo.html
@@ -6,7 +6,7 @@
     <main class="page-content" aria-label="Content">
       <div class="w">
         <a href="/"></a><h1>&lt;thought repo&gt;</h1><br>
-        <a href="http://localhost:4000/">[home]</a>
+        <a href="https://olivia-long127.github.io/site/">[home]</a>
         <p>Some writing I've done for classes and journal entries.</p>
         <h2>"Précis 1" for Unsettling Science, 09.26.2024.</h2>
         <p><span style="font-weight: 400;">My favorite <a href="https://www.youtube.com/watch?v=ycl_78Ef-d0">animation</a> is by @mummy__joe</span><span style="font-weight: 400;">: it features stripped-down art, soulless corporate music, and a depressing storyline. We&rsquo;re introduced to Tina, a girl who eats Crunchinos every morning. Tina exchanges ten Crunchino tokens for a &ldquo;Goobyvision Pro&rdquo;</span><span style="font-weight: 400;">, and within the Crunchinoverse, she spends 10,000 hours mining Crunch-O coins for &ldquo;15 gigabytes of gorgeous Crunchino-front property&rdquo; to upload her consciousness (&ldquo;the Crunchinoverse version of&hellip; [happiness]&rdquo;). &ldquo;I&rsquo;ll&hellip; spend&hellip; eternity&hellip; in virtual stillness&hellip; the only indication that I exist will be a blinking green light&hellip; until the fall of civilization.&rdquo;</span></p>
