--- a/image-repo.html
+++ b/image-repo.html
@@ -6,7 +6,7 @@
     <main class="page-content" aria-label="Content">
       <div class="w">
         <a href="/"></a><h1>&lt;img repo&gt;</h1>
-        <a href="http://localhost:4000/">[home]</a>
+        <a href="https://olivia-long127.github.io/site/">[home]</a>
         <p>An image repository of the purest form. <br> Freedom from you and me, freedom to be.</p>
         <img src="https://github.com/olivia-long127/img-repo/blob/main/IMG_5572.jpg?raw=true" alt="horrendous cafe">
         <i><br>Shiho Igarashi, 2025. All other photos taken by me using an Olympus µ Mini.</i><br><br>
