--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <h1>Olivia Long</h1></header><ul></ul>
   <p>Junior @ Columbia studying CS & Cognitive Science && <br> Co-Director @ CAIAC // NYC AI Safety Fieldbuilder && <br> Horrendous Café. </p>
   <h2>Links</h2>
-  <p><a href="mailto:ol2256@columbia.edu">[email] </a><a href="https://www.cualignment.org" target="_blank">[caiac] </a><a href="https://github.com/olivia-long127" target="_blank">[github] </a><a href="https://linkedin.com/in/olivia-l-572351246" target="_blank">[linkedin] </a><br><a href="http://localhost:4000/posts/image-repo.html">[image repository] </a><a href="http://localhost:4000/posts/thought-repo.html">[thought repository]</a></p>
+  <p><a href="mailto:ol2256@columbia.edu">[email] </a><a href="https://www.cualignment.org" target="_blank">[caiac] </a><a href="https://github.com/olivia-long127" target="_blank">[github] </a><a href="https://linkedin.com/in/olivia-l-572351246" target="_blank">[linkedin] </a><br><a href="https://olivia-long127.github.io/site/image-repo.html">[image repository] </a><a href="https://olivia-long127.github.io/site/thought-repo.html">[thought repository]</a></p>
       </div>
     </main>
   </body>
