--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
       let particle = {
         x: Math.random() * canvas.width,
         y: Math.random() * canvas.height,
-        vx: Math.random(),
-        vy: Math.random()
+        vx: Math.random() * 0.6,
+        vy: Math.random() * 0.6
       }
       particles.push(particle);
     }
